# controllers/v1/clapper/position.go
@@ -11,6 +11,13 @@ import (
 )
 
 // PositionList handles listing all possible positions
+// @Summary List positions
+// @Description Lists all positions.
+// @ID get-positions
+// @Tags positions
+// @Produce json
+// @Success 200 {array} clapper.Position
+// @Router /v1/internal/clapper/position [get]
 func (r *Repos) PositionList(c echo.Context) error {
 	p, err := r.position.List(c.Request().Context())
 	if err != nil {
@@ -21,6 +28,14 @@ func (r *Repos) PositionList(c echo.Context) error {
 }
 
 // PositionNew handles creating a new position
+// @Summary New position
+// @Description creates a new position.
+// @ID new-position
+// @Tags positions
+// @Accept json
+// @Param event body clapper.Position true "Position object"
+// @Success 201 body int "Position ID"
+// @Router /v1/internal/clapper/position [post]
 func (r *Repos) PositionNew(c echo.Context) error {
 	p := clapper.Position{}
 	err := c.Bind(&p)
@@ -37,6 +52,14 @@ func (r *Repos) PositionNew(c echo.Context) error {
 }
 
 // PositionUpdate updates an existing position
+// @Summary Update position
+// @Description updates a position.
+// @ID update-position
+// @Tags positions
+// @Accept json
+// @Param quote body clapper.Position true "Position object"
+// @Success 200
+// @Router /v1/internal/clapper/position [put]
 func (r *Repos) PositionUpdate(c echo.Context) error {
 	p := clapper.Position{}
 	err := c.Bind(&p)
