# controllers/v1/people/user.go
@@ -25,6 +25,14 @@ type (
 )
 
 // UserByID finds a user by ID
+// @Summary Get a user by ID
+// @Description Get a basic user object by ID.
+// @ID get-user-id
+// @Tags users
+// @Produce json
+// @Param userid path int true "User ID"
+// @Success 200 {object} people.User
+// @Router /v1/internal/people/user/{userid} [get]
 func (r *Repo) UserByID(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -39,6 +47,14 @@ func (r *Repo) UserByID(c echo.Context) error {
 }
 
 // UserByIDFull finds a user by ID returing all info
+// @Summary Get a full user by ID
+// @Description Get a complete user object by ID.
+// @ID get-user-id-full
+// @Tags users
+// @Produce json
+// @Param userid path int true "User ID"
+// @Success 200 {object} people.User
+// @Router /v1/internal/people/user/{userid}/full [get]
 func (r *Repo) UserByIDFull(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -53,6 +69,13 @@ func (r *Repo) UserByIDFull(c echo.Context) error {
 }
 
 // UserByToken finds a user by their JWT token
+// @Summary Get a user by token
+// @Description Get a basic user object by JWT token generated by web-auth.
+// @ID get-user-token
+// @Tags users
+// @Produce json
+// @Success 200 {object} people.User
+// @Router /v1/internal/people/user [get]
 func (r *Repo) UserByToken(c echo.Context) error {
 	claims, err := GetToken(c)
 	if err != nil {
@@ -68,6 +91,13 @@ func (r *Repo) UserByToken(c echo.Context) error {
 }
 
 // UserByTokenFull finds a user by their JWT token returning all info
+// @Summary Get a full user by token
+// @Description Get a complete user object by JWT token generated by web-auth.
+// @ID get-user-token-full
+// @Tags users
+// @Produce json
+// @Success 200 {object} people.UserFull
+// @Router /v1/internal/people/user/full [get]
 func (r *Repo) UserByTokenFull(c echo.Context) error {
 	claims, err := GetToken(c)
 	if err != nil {
